

                              KijiSchema Release Notes

Version 1.3.7
  * SCHEMA-491. Share/reuse Zookeeper connections instances when possible.
  * SCHEMA-650. The KijiTableReaderPool now retains the KijiTable associated with
      its KijiReaderFactory. Closing the pool will release the table.

Version 1.3.5
  * SCHEMA-627. The schema table tool now permits listing all schemas and
      output to StdOut.

Version 1.3.4
  * SCHEMA-604. Adds support for MapR's distribution of HBase.
  * SCHEMA-557. Removes HTablePool usage.
  * SCHEMA-605. Fixes compatibility with the latest 1.X Hadoop and 0.94.X
      HBase releases.

Version 1.3.3
  * SCHEMA-584. KijiTableAnnotator now supports storing string key-value
      annotations on tables and columns.

Version 1.3.2
  * SCHEMA-586. KijiTableReaderPool now supports managing a pool of open
      KijiTableReaders for thread safe concurrent reads.

Version 1.3.1
  * SCHEMA-544. Introduce new layout version 1.4 with PROTOBUF cell encoding.
  * SCHEMA-574. Fixed broken validation logic from Avro.
  * SCHEMA-581. Fixed potential race condition in client IDs used to identify
      users of Kiji instances and Kiji tables.

Version 1.3.0
  * SCHEMA-548. Introduce RAW_BYTES cell encoding that expose pure bytes cells.
  * SCHEMA-547. AtomicKijiPutter.checkAndCommit() can check for the
      non-existence of a cell.
  * SCHEMA-515. Exposes table and data request in HBaseKijiRowData.
  * SCHEMA-485. Adds profiling pointcuts for HBase reads/writes.
  * SCHEMA-514. DeleteTool correctly formats the delete confirmation message
      when deleting all entries from a cell.
  * SCHEMA-543. Added a table layout containing all relevant cell types that
      can be used in tests.

Version 1.2.0
  * SCHEMA-335, SCHEMA-489. Fix: FormattedEntityId and KijiTableLayout trigger
      NPE if RowKeyFormat2.salt is null. Omitted salt entries now default to a
      2-byte MD5-based hash prefix.